samples/_failures_safe/1761002117_d615f7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_96beb97a.c: In function ‘main’:
./samples/SAFE/__tmp_96beb97a.c:136:9: error: expected expression at end of input
  136 |         return
      |         ^~~~~~
./samples/SAFE/__tmp_96beb97a.c:136:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_96beb97a.c:136:9: error: expected declaration or statement at end of input
